refactor(controller): improve code formatting and consistency
Remove unnecessary import statements and improve code readability
by standardizing indentation and spacing. This simplifies
maintenance and reduces errors. Fixes issue #123 from preprod.